--- a/README
+++ b/README
@@ -1,5 +1,24 @@
 --------------------
 2011-03-27
+Changed the way the output is generated.  In the example below i have an unordered list with ids on the <li>s.
+
+HTML
+<div id="timer">
+     <ul>
+           <li id="days"></li>
+           <li id="hours"></li>
+           <li id="minutes"></li>
+           <li id="seconds"></li>
+     </ul>
+</div>
+
+CSS
+#timer ul { list-style-type: none; }
+#timer ul li span { display: block; float: left; width: 100px; }
+
+Added support page at: http://www.matthewaprice.com/simple-javascript-timer/
+--------------------
+2011-03-27
 This is a simple javascript countdown timer for jquery.  You put this in your scripts.js file.  This is not a plugin.  Currently it works by pulling unix time off an id of a span in your html.  My original purpose was for pulling the initial timer from a db.  I would like to adapt this into a jquery plugin so that you could call it like this:
 
 $("#timer").countDown("September 01, 2011 00:00:00");
